@@ -1,6 +1,7 @@
 Release Note
 
 * current
+  * using panda instead of user account in EP
   * removed setReplicaMetaDataAttribute from EP
   * added partial finish
   * setting None to pre-merged log files when sending ES merge jobs
